# SarsaLambdaFlappyBird

./: README.md  pyproject.toml  qsa.csv  requirements.txt
src/: flappy.py
src/entities/: __init__.py  agent.py  pipe.py  player.py
